# pca-from-scratch

./: .gitignore  pyproject.toml
pca/: pca.py  utils.py
tests/: test_covariance.py  test_eigenvalues_eigenvectors.py  test_norm.py  test_pca.py
